# Digital-Ecommerce

./: .coveragerc  .env.copy  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO  db.sqlite3  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requests  requirements.txt  setup.cfg  test.py
.github/workflows/: codeql.yml  coverage.yml
BotCommerce/: asgi.py  settings.py  urls.py  wsgi.py
apps/: shop_urls.py  urls.py
apps/ecommerce/: models.py  serializers.py  tests.py  urls.py  views.py
apps/fixtures/: shop_category.yaml  shop_currency.yaml
apps/nginx/: Dockerfile  nginx.conf
apps/orders/: admin.py  models.py  serializers.py  views.py
apps/products/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/shared/: backends.py  emojis.py  mixins.py  model_configs.py  paginate.py  permisions.py  routers.py  tasks.py  validators.py
apps/shops/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py
apps/telegrambots/: apps.py  bot.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
commands/: __init__.py  collect_data.py  shops_category.py  shops_currency.py
nginx/: nginx.conf
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
root/: asgi.py  celery.py  hosts.py  middleware.py  other_urls.py  settings.py  urls.py  wsgi.py
shops/: admin.py  apps.py  models.py  serializers.py  urls.py
shops/migrations/: 0001_initial.py  0002_initial.py  (+2 more)
shops/views/: shop.py
users/: models.py
(+59 files in other folders)
